--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,43 @@ body {
     background-color: #2F587B;
 }
 
+.navbar .nav-link {
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-left: 0.6rem !important;
+    padding-right: 0.6rem !important;
+}
+
+.navbar .nav-item.active {
+    border-left: #fff 1px solid;
+}
+
 .fa-search {
     color: #fff;
 }
 
+.carousel-item {
+    height: 450px;
+}
+
+.carousel-image-1 {
+    background: url(../img/image1.jpg);
+    background-size: cover;
+}
+
+.carousel-image-2 {
+    background: url(../img/image2.jpg);
+    background-size: cover;
+}
+
+.carousel-image-3 {
+    background: url(../img/image3.jpg);
+    background-size: cover;
+}
+
+.carousel-image-4 {
+    background: url(../img/image4.jpg);
+    background-size: cover;
+}
 
