--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@ body {
     border-left: #fff 1px solid;
 }
 
+.navbar {
+    border-bottom: #F6AA1C 3px solid;
+    opacity: 0.9;
+}
+
 .fa-search {
     color: #fff;
 }
