--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,10 @@ h1, h2, h3, .footerP {
 /* Brands Slider Part */
 
 
-.footer-row-1 {
-    border-bottom: #fff 1px solid;
+.footer-row-2 {
+    border-top: #fff 1px solid;
+}
+
+#contact1 {
+    background: #ef476f;
 }
