--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,90 @@
 body {
-  font-family: "Open Sans", sans-serif; 
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3, .footerP {
-    font-family: "Courgette", cursive;
-} 
+  font-family: "Courgette", cursive; }
 
-#latestPost h3 {
-    color: #ef476f;
-    font-size: 2rem;
-}
+#latestPost h3, #contactSection h3 {
+  color: #ef476f;
+  font-size: 2rem; }
 
 .latestPost {
-    font-family: "Caveat", sans-serif;
-    font-size: 2rem;
-}
+  font-family: "Caveat", sans-serif;
+  font-size: 2rem; }
 
 .card-text {
-    font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 .navbar {
-    background-color: #2F587B;
-}
+  background-color: #2F587B; }
 
 .navbar .nav-link {
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: bold;
-    padding-left: 0.6rem !important;
-    padding-right: 0.6rem !important;
-}
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-left: 0.6rem !important;
+  padding-right: 0.6rem !important; }
 
 .navbar .nav-item.active {
-    border-left: #fff 1px solid;
-}
+  border-left: #fff 1px solid; }
 
 .navbar {
-    border-bottom: #F6AA1C 3px solid;
-    opacity: 0.9;
-}
+  border-bottom: #F6AA1C 3px solid;
+  opacity: 0.9; }
 
 .fa-search {
-    color: #fff;
-}
+  color: #fff; }
 
 .carousel-item {
-    height: 550px;
-}
+  height: 575px; }
 
 .carousel-image-1 {
-    background: url(../img/image1.jpg);
-    background-size: cover;
-}
+  background: url(../img/image1.jpg);
+  background-size: cover; }
 
 .carousel-image-2 {
-    background: url(../img/image2.jpg);
-    background-size: cover;
-}
+  background: url(../img/image2.jpg);
+  background-size: cover; }
 
 .carousel-image-3 {
-    background: url(../img/image3.jpg);
-    background-size: cover;
-}
+  background: url(../img/image3.jpg);
+  background-size: cover; }
 
 .carousel-image-4 {
-    background: url(../img/image4.jpg);
-    background-size: cover;
-}
+  background: url(../img/image4.jpg);
+  background-size: cover; }
 
 .mb-resposive {
-    margin-bottom: 1rem;
-}
+  margin-bottom: 1rem; }
 
 /* Brands Slider Part */
-
-
 .footer-row-2 {
-    border-top: #fff 1px solid;
-}
+  border-top: #fff 1px solid; }
 
 #contact1 {
-    background: #ef476f;
-}
+  background: #ef476f; }
 
 /* Contact Form Section */
 #contactSection {
-    margin-top: 100px;
-}
+  margin-top: 100px; }
 
 .contactUsSection {
-    font-family: "Dancing script", sans-serif;
-    font-size: 25px;
-}
-
-#contactSection h3 {
-    color: #ef476f;
-    font-size: 2rem;
-}
+  font-family: "Dancing script", sans-serif;
+  font-size: 25px; }
 
 .contactUsSection {
-    border-bottom: #ef476f 2px solid;
-    padding-bottom: 15px;
-}
+  border-bottom: #ef476f 2px solid;
+  padding-bottom: 15px; }
+
+/* Adding Map to the Site */
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: grey; }
+
+#findUs h3 {
+  color: #fff; }
+
+#findUs {
+  background: #2F587B;
+  opacity: 0.9; }
