--- a/css/styles.scss
+++ b/css/styles.scss
@@ -94,16 +94,14 @@ h1, h2, h3, .footerP {
 }
 
 /* Contact Form Section */
-#contactSection {
-    margin-top: 100px;
+#contactSection, #signInSection {
+    margin-top: 120px;
 }
 
 .contactUsSection {
     font-family: "Dancing script", sans-serif;
     font-size: 25px;
 }
-
-
 
 .contactUsSection {
     border-bottom: #ef476f 2px solid;
@@ -125,3 +123,39 @@ h1, h2, h3, .footerP {
     background: #2F587B;
     opacity: 0.9;
 }
+
+// Sign In page
+.separator {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.separator::before, .separator::after {
+    content: '';
+    flex: 1;
+    border-bottom: 1px solid $color-pale;
+    }
+
+.separator::before {
+    margin-right: .25em;
+}
+
+.separator::after {
+    margin-left: .25em;
+}
+
+form.form-group a:hover{
+    text-decoration: none;
+}
+
+button #shadow:hover, #shadow:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+
+
+
+
+
