Reset Password Page

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -94,7 +94,7 @@ h1, h2, h3, .footerP {
 }
 
 /* Contact Form Section */
-#contactSection, #signInSection {
+#contactSection, #signInSection, #resetSection {
     margin-top: 120px;
 }
 
@@ -125,6 +125,11 @@ h1, h2, h3, .footerP {
 }
 
 // Sign In page
+.sizing {
+    font-size: 14px;
+    text-align: center;
+}
+
 .separator {
     display: flex;
     align-items: center;
@@ -145,7 +150,7 @@ h1, h2, h3, .footerP {
     margin-left: .25em;
 }
 
-form.form-group a:hover{
+form.formGroup a:hover{
     text-decoration: none;
 }
 
@@ -153,6 +158,34 @@ button #shadow:hover, #shadow:focus {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.25em);
 }
+
+.placeHolder {
+  font-size: 15px;
+  height: 50px !important;
+  
+  .placeHolder::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-size: 15px;
+    }
+
+.placeHolder::-webkit-input-placeholder { /* WebKit browsers */
+  font-size: 15px;
+    }   
+
+.placeHolder:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  font-size: 15px;
+    }
+
+.placeHolder::-moz-placeholder { /* Mozilla Firefox 19+ */
+  font-size: 15px;
+    }
+
+.placeHolder:-ms-input-placeholder { /* Internet Explorer 10+ */
+  font-size: 15px;
+    }
+}
+
+
+
 
 
 
