--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ h1, h2, h3, .footerP {
   background: #ef476f; }
 
 /* Contact Form Section */
-#contactSection, #signInSection {
+#contactSection, #signInSection, #resetSection {
   margin-top: 120px; }
 
 .contactUsSection {
@@ -89,6 +89,10 @@ h1, h2, h3, .footerP {
   background: #2F587B;
   opacity: 0.9; }
 
+.sizing {
+  font-size: 14px;
+  text-align: center; }
+
 .separator {
   display: flex;
   align-items: center;
@@ -105,9 +109,28 @@ h1, h2, h3, .footerP {
 .separator::after {
   margin-left: .25em; }
 
-form.form-group a:hover {
+form.formGroup a:hover {
   text-decoration: none; }
 
 button #shadow:hover, #shadow:focus {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.25em); }
+
+.placeHolder {
+  font-size: 15px;
+  height: 50px !important; }
+  .placeHolder .placeHolder::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    font-size: 15px; }
+  .placeHolder .placeHolder::-webkit-input-placeholder {
+    /* WebKit browsers */
+    font-size: 15px; }
+  .placeHolder .placeHolder:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    font-size: 15px; }
+  .placeHolder .placeHolder::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    font-size: 15px; }
+  .placeHolder .placeHolder:-ms-input-placeholder {
+    /* Internet Explorer 10+ */
+    font-size: 15px; }
